--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -12,17 +12,17 @@ interface Props {
 
 const { className = '', links = [
   { 
-    href: "https://github.com/karinatovarg", 
+    href: "https://github.com/karina-tc", 
     icon: "GitHubLogo",
     label: "GitHub"
   },
   { 
-    href: "https://linkedin.com/in/karinatovarg", 
+    href: "https://www.linkedin.com/in/karina-tovar-castro/", 
     icon: "LinkedIn",
     label: "LinkedIn"
   },
   { 
-    href: "https://twitter.com/karinatovarg", 
+    href: "https://x.com/karina_tovarc", 
     icon: "TwitterLogo",
     label: "Twitter"
   },
