--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -14,16 +14,16 @@ const { href, onClick, type = 'button', additionalClasses = '', children } = Ast
 
 {type === 'link' ? (
   <a href={href} class="button ${additionalClasses}">
-    <slot />
+    <span class="z-10 relative"><slot /></span>
   </a>
 ) : (
   <button onclick={onClick} class={`button ${additionalClasses}`}>
-    <slot />
+    <span class="z-10 relative"><slot /></span>
   </button>
 )}
 
 <style>
   .button {
-    @apply bg-black p-2 px-4 rounded-md mt-4 text-white text-center;
+    @apply relative border-2 border-white shadow-md py-1.5 px-4 rounded-full text-black text-center text-base overflow-hidden bg-white/50 transition-all hover:bg-black hover:text-white;
   }
 </style>
