--- a/src/components/SectionBlock.astro
+++ b/src/components/SectionBlock.astro
@@ -15,4 +15,7 @@ const { title } = Astro.props;
   .block {
     @apply flex-1 w-full flex flex-col gap-3 justify-center mb-20;
   }
+  h2 {
+    @apply text-3xl font-medium font-instrument;
+  }
 </style>
