--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,26 +4,56 @@ import '../styles/global.css';
 interface Props {
   href?: string;
   onClick?: string;
-  type?: 'link' | 'button';
+  type?: 'link' | 'button' | 'textual';
   additionalClasses?: string;
   children: any;
+  'data-section'?: string;
 }
 
-const { href, onClick, type = 'button', additionalClasses = '', children } = Astro.props;
+const { 
+  href, 
+  onClick, 
+  type = 'button', 
+  additionalClasses = '', 
+  children,
+  'data-section': dataSection
+} = Astro.props;
 ---
 
 {type === 'link' ? (
-  <a href={href} class="button ${additionalClasses}">
-    <span class="z-10 relative"><slot /></span>
+  <a href={href} class={`group button-wrapper ${additionalClasses}`}>
+    <slot />
+    <div class="button-effect">
+      <div class="button-glow"></div>
+    </div>
+  </a>
+) : type === 'textual' ? (
+  <a href={href} class={`text-based ${additionalClasses}`} data-section={dataSection}>
+    <slot />
   </a>
 ) : (
-  <button onclick={onClick} class={`button ${additionalClasses}`}>
-    <span class="z-10 relative"><slot /></span>
+  <button type="button" class={`group button-wrapper ${additionalClasses}`} onclick={onClick}>
+    <slot></slot>
+    <div class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]">
+      <div class="button-glow"></div>
+    </div>
   </button>
 )}
 
 <style>
-  .button {
-    @apply relative border-2 border-white shadow-md py-1.5 px-4 rounded-full text-black text-center text-base overflow-hidden bg-white/50 transition-all hover:bg-black hover:text-white;
+  .button-wrapper {
+    @apply cursor-pointer relative inline-flex h-9 items-center justify-center overflow-hidden rounded-full bg-black border border-white px-4 text-sm font-medium text-white transition-all hover:shadow-md;
+  }
+  .button-effect {
+    @apply absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)];
+  }
+  .button-glow {
+    @apply relative h-full w-8 bg-white/20
+  }
+  .text-based {
+    @apply cursor-pointer text-base font-medium relative after:absolute after:-bottom-1 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-black after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100;
+  }
+  .text-based.activate {
+    @apply after:origin-bottom-left after:scale-x-100;
   }
 </style>
