--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import TwoColumnLayout from '../layouts/TwoColumnLayout.astro';
 import Button from '../components/Button.astro';
-import Card from '../components/Card.astro';
 import SocialIcons from '../components/SocialIcons.astro';
 import SpotifyHoverCard from '../components/SpotifyHoverCard.astro';
 
@@ -34,6 +33,47 @@ try {
 } catch (error) {
   console.error('Failed to fetch Spotify data:', error);
 }
+
+interface TabContent {
+  id: string;
+  buttonText: string;
+  content: {
+    before?: string;
+    highlight: string;
+    after: string;
+  };
+  isDefault?: boolean;
+}
+
+const tabsContent: TabContent[] = [
+  {
+    id: "humanity",
+    buttonText: "For Humanity",
+    content: {
+      before: "My motivation is to craft products that aim to ",
+      highlight: "help people have happier days",
+      after: " so that they—and their loved ones—can have better lives. If you believe the same, I am your designer."
+    },
+    isDefault: true
+  },
+  {
+    id: "business",
+    buttonText: "For Business",
+    content: {
+      highlight: "Driving sustainable growth through innovation.",
+      after: " Building strategy and value for your company, employees, and customers. Let's partner up."
+    }
+  },
+  {
+    id: "teams",
+    buttonText: "For Teams",
+    content: {
+      before: "I thrive on ",
+      highlight: "collaborative innovation",
+      after: " and empowering teams to achieve their full potential. Together, we'll turn challenges into opportunities and ideas into impact."
+    }
+  }
+];
 ---
 
 <TwoColumnLayout
@@ -55,9 +95,29 @@ try {
     <SocialIcons className="mt-5" />
   </div>
   <section class="manifesto">
-    <h2>My motivation is to craft products that aim to help people have happier days so that they—and their loved ones—can have better lives. If you believe the same. I am your designer.</h2>
+    <div class="space-x-4 pt-2">
+      {tabsContent.map(tab => (
+        <Button 
+          type="textual" 
+          additionalClasses={`for-${tab.id} ${tab.isDefault ? 'activate' : ''}`} 
+          href="#" 
+          data-section={tab.id}
+        >
+          {tab.buttonText}
+        </Button>
+      ))}
+    </div>
+    <div class="min-h-[132px]">
+      {tabsContent.map(tab => (
+        <h2 id={tab.id} class={`section-content ${!tab.isDefault ? 'hidden' : ''}`}>
+          {tab.content.before}
+          <span class="highlight">{tab.content.highlight}</span>
+          {tab.content.after}
+        </h2>
+      ))}
+    </div>
     <p>In my 10+ years of experience, I've helped startups evolve from ideas to fully fledged, thoughtfully crafted products. I have worked in Email Marketing, Ad Tech, HR and FinTech. Specializing in technical software, I work tirelessly to make the tedious simple while bringing joy in every pixel and line of code.</p>
-    <nav class="flex gap-2.5">
+    <nav class="space-x-2 pt-2">
       <Button type="link" href="/work">My Work</Button>
       <Button type="link" href="/thoughts">My Thoughts</Button>
       <Button type="link" href="/cv">CV</Button>
@@ -67,9 +127,25 @@ try {
 
 <style>
   .manifesto {
-    @apply flex-1 flex-col space-y-5 max-w-lg p-2;
+    @apply flex-1 flex-col space-y-6 max-w-lg p-4;
   }
-  h2 {
+  .manifesto h2 {
     @apply text-2xl;
   }
+  .manifesto p {
+    @apply leading-7;
+  }
+  .highlight {
+    @apply px-1.5 py-[2px] bg-yellow-200;
+  }
+  .section-content {
+    transition: all 300ms ease-in-out;
+  }
+  .section-content.hidden {
+    display: none;
+  }
 </style>
+
+<script>
+  import '../scripts/TabsSwitcher';
+</script>
