--- a/src/layouts/TwoColumnLayout.astro
+++ b/src/layouts/TwoColumnLayout.astro
@@ -56,7 +56,7 @@ const {
         <slot name="left-column-extra" />
       </div>
     </aside>
-    <section class="two-col-right-column">
+    <section class="two-col-right-column" transition:animate="slide">
       <slot />
     </section>
   </main>
