--- a/src/layouts/ThoughtLayout.astro
+++ b/src/layouts/ThoughtLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BackButton from '../components/BackButton.astro';
+import Breadcrumbs from '../components/Breadcrumbs.astro';
 import Layout from './Layout.astro';
 import * as Icon from '@astropub/icons'
 import Gem from '../components/Gem.astro';
@@ -13,11 +14,15 @@ interface Props {
 }
 
 const { title, date, categories, showcase } = Astro.props;
+
+const breadcrumbs = [
+  { text: 'Thoughts', href: '/thoughts' }
+];
 ---
 
 <Layout title={title}>
   <article class="prose prose-lg thoughts-container">
-    <BackButton href="/thoughts" text="Thoughts" />
+    <Breadcrumbs crumbs={breadcrumbs} />
     <header class="thoughts-header">
       <h1>{title}</h1>
       <div class="date-container">
