--- a/src/components/LoadingBar.astro
+++ b/src/components/LoadingBar.astro
@@ -5,12 +5,16 @@
 <script>
   document.addEventListener('astro:page-load', () => {
     const loadingBar = document.getElementById('loading-bar');
-    loadingBar.style.display = 'none';
+    if (loadingBar) {
+      loadingBar.style.display = 'none';
+    }
   });
 
   document.addEventListener('astro:before-preparation', () => {
     const loadingBar = document.getElementById('loading-bar');
-    loadingBar.style.display = 'block';
+    if (loadingBar) {
+      loadingBar.style.display = 'block';
+    }
   });
 </script>
 
