copy change in thoughts index

--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -23,10 +23,10 @@ const initialCategory = Astro.url.searchParams.get('category') || 'all';
   breadcrumbs={breadcrumbs}
   additionalClasses="[&>.right-column]:h-full"
   asideTitle={{
-    line1: "Product Designer",
-    line2: "Pixel Philosopher"
+    line1: "Thinking",
+    line2: "Experiences"
   }}
-  subtitle="USA Based · Listening to Music"
+  subtitle="Diary of thoughts from a pixel philosopher"
 >
   <div slot="left-column-extra" class="categories-list">
     <ul class="flex flex-wrap gap-2">
