token color changes

--- a/src/components/AsideTitle.astro
+++ b/src/components/AsideTitle.astro
@@ -15,7 +15,7 @@ const { line1, line2, additionalClasses = '' } = Astro.props;
 
 <style>
   h1 {
-    @apply text-7xl;
+    @apply text-7xl text-inkDark;
     span {
       @apply leading-none;
     }
