--- a/src/layouts/ThoughtLayout.astro
+++ b/src/layouts/ThoughtLayout.astro
@@ -83,7 +83,7 @@ const breadcrumbs = [
   }
 
   .thought-content :global(h2) {
-    @apply font-instrument;
+    @apply font-instrument text-3xl text-inkDark;
   }
   
   .thought-content :global(ul),
