--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -46,7 +46,7 @@ const {
 
 <style>
   .button-wrapper {
-    @apply cursor-pointer relative inline-flex h-9 items-center justify-center overflow-hidden rounded-full bg-black border border-white px-4 text-sm font-medium text-white transition-all hover:shadow-md;
+    @apply cursor-pointer relative inline-flex h-9 items-center justify-center overflow-hidden rounded-full bg-inkDark border border-white px-4 text-sm font-medium text-white transition-all hover:shadow-md;
   }
   .button-effect {
     @apply absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)];
@@ -55,7 +55,7 @@ const {
     @apply relative h-full w-8 bg-white/20
   }
   .text-based {
-    @apply cursor-pointer text-base font-medium relative after:absolute after:-bottom-1 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-black after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100;
+    @apply cursor-pointer text-base font-medium relative after:absolute after:-bottom-1 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-inkLighter after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100;
   }
   .text-based.activate {
     @apply after:origin-bottom-left after:scale-x-100;
