--- a/src/components/CoordinateGrid.astro
+++ b/src/components/CoordinateGrid.astro
@@ -17,7 +17,7 @@
 
 <style>
   .coordinate-grid {
-    @apply font-mono absolute top-0 left-0 w-full h-full pointer-events-none bg-blend-overlay opacity-25 text-black text-[10px];
+    @apply font-mono absolute top-0 left-0 w-full h-full pointer-events-none bg-blend-overlay opacity-25 text-ink text-[10px];
   }
   .column-coordinates {
     @apply absolute py-4 ml-4 top-2 left-0 w-full flex justify-between px-4;
