--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,6 @@
 
 @layer components {
     .button {
-        @apply bg-black p-2 px-4 rounded-md mt-4 text-white;
+        @apply bg-inkDark p-2 px-4 rounded-md mt-4 text-white;
     }
 }
