--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,7 +22,7 @@ const { brow_text, title, image, body, alt_text, additionalClasses = '' } = Astr
 </div>
 <style>
 	.card {
-    @apply flex flex-col h-fit gap-4 p-10 bg-white/80 backdrop-blur-sm text-ink rounded-tl-2xl rounded-br-2xl rounded-tr-sm rounded-bl-sm min-w-[580px] max-w-[580px] min-h-[580px] shadow-md transition-all duration-300 ease-in-out hover:shadow-lg hover:-translate-y-1;
+    @apply flex flex-col h-fit gap-4 p-10 bg-paper/80 backdrop-blur-sm text-ink rounded-tl-2xl rounded-br-2xl rounded-tr-sm rounded-bl-sm min-w-[580px] max-w-[580px] min-h-[580px] shadow-md transition-all duration-300 ease-in-out hover:shadow-lg hover:-translate-y-1;
   }
   .brow-text {
     @apply text-ink font-medium text-xl;
