--- a/src/components/SpotifyHoverCard.astro
+++ b/src/components/SpotifyHoverCard.astro
@@ -24,7 +24,7 @@ const getDisplayText = () => {
   </span>
   
   {songName && (
-    <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible hover:opacity-100 hover:visible absolute left-0 mt-2 w-72 bg-white rounded-lg shadow-lg p-4 z-50 border border-gray-200 transition-all duration-200">
+    <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible hover:opacity-100 hover:visible absolute left-0 mt-2 w-72 bg-paper rounded-lg shadow-lg p-4 z-50 border border-gray-200 transition-all duration-200">
       <div class="flex items-start gap-4">
         {albumArt && (
           <img 
