--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,7 +67,7 @@ const { title, body_classes = '' } = Astro.props;
 		--loading-progress-color: #BCAD8F;
 	}
 	html {
-		@apply bg-light-base text-ink;
+		@apply bg-paper text-ink;
 	}
 	code {
 		font-family:
